<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.facebook.drawee.view.SimpleDraweeView

            android:id="@+id/sdv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:failureImage="@color/colorImageBackground"
            app:placeholderImage="@color/colorImageBackground"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/tv" android:minWidth="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="#aaffffff"
            android:gravity="center|bottom"
            android:maxLines="1" android:maxLength="40"
            android:padding="8dp"
            android:text=""
            android:textColor="@android:color/black" />
    </FrameLayout>
</android.support.v7.widget.CardView>